# ss-z2p

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: main.yml
config/: base.yaml  production.yaml
migrations/: 20220825100551_create_subscriptions_table.sql  20221210130447_make_status_not_null_in_subscriptions.sql  20221210130806_create_subscriptions_token_table.sql  20221218050827_create_users_table.sql  20221218071619_add_salt_to_users.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
