[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.1.0"
actix-http = "3.2.1"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.11"
tokio = "1.20.0"

