[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.1.0"
actix-http = "3.2.1"
serde = { version = "1", features = ["derive"] }
config = "0.13.2"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-actix-web = "0.6.0"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
reqwest = { version = "0.11.11", features = ["json"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.37"
anyhow = "1.0.66"

[dev-dependencies]
actix-rt = "2.7.0"
claim = "0.5.0"
once_cell = "1.14.0"
tokio = { version = "1.0.0", features = ["rt", "macros"] }
quickcheck = "0.9.1"
quickcheck_macros = "0.9.1"
fake = "~2.3"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
